src/test/deca/context/valid/sansObjet/declVarNoInit-1.deca
// Description :
//    Déclaration d'une variable sans initialisation.
//
// Resultats :
//    ok

{
    int a;
}